# opi-examen-EA

./: .gitignore  EXERCISE 1.ipynb  EXERCISE 2.ipynb  README.md  errores.csv  non-sense-data.ipynb  pyproject.toml  test.ipynb
code/: EXERCISE 1.ipynb  EXERCISE 2.ipynb  cheapest.csv  cheapest.xlsx  higher_values.csv  higher_values.xlsx  most_expensive.csv  most_expensive.xlsx  non-sense-data.csv  non-sense-data.ipynb
